# bill-accelerator

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  requirements.txt  run.sh  test_bindings.py
python/: app.py  ocr_engine.py
src/: bindings.cpp  image_core.cu
src/include/: image_core.hpp
